Fix opengl es initialization for different formats

|     | GLES 2                 | GLES 3                               | DesktopGL  | Windows (ANGLE)        |
|-----|------------------------|--------------------------------------|------------|------------------------|
| 16i | GL_EXT_texture_storage | GL_EXT_texture_norm16                | GL_RGBA16  | GL_EXT_texture_storage |
| 16f | GL_EXT_texture_storage | GL_RGBA16F (!GL_EXT_texture_storage) | GL_RGBA16F | GL_EXT_texture_storage |
| 32f | GL_EXT_texture_storage | GL_RGBA16F (!GL_EXT_texture_storage) | GL_RGBA16F | GL_EXT_texture_storage |

BUG:445179

Co-Authored-By: L. E. Segovia <amy@amyspark.me>